* added a model.frame method for marssMODEL and marssMLE
* added broom augment, tidy and glance functions for marssMLE
* added logLik method for marssMLE objects
* added fitted method for marssMLE objects to return Z xtT + u (model fitted value of y)

MISC
* moved info in MARSSsettings.R to .onLoad function.
* added suppressWarnings() wrapper to KFAS call when R=0 in MARSSkfas since update to KFAS package produces warning messages when R=0.
* Typo in Eqn 124 of EMDerivation.pdf.  \beta should have been ^{-1}. Typo in Eqns 133 and 134.  vec parentheses should have been in front of R in second summation.  R in first line of eqn 133, was not referring to R (the var-cov matrix).  It should have had a new symbol.  Switched to T.  Eqn 134 was not R but this 'T'.
* added safe to control list in man file MARSS.Rd   Left off accidentally.
* Small change to DLM chapter to clarify that rotation matrix only exists if Z has more than 2 columns.
* All subfunctions for a function moved into the main functions so they are hidden to the rest of the functions.
* The logLik function was using the logLik, samp.size and df attributes from the MLE object, but this is prone to creating errors.  The user may have changed the model structure or data in a MLE object and is trying to get the new logLik.  Changed to recompute the logLik.
* removed use of stringr package; did not need
* Poor name choice. y.se was not the standardard error of ytT since sqrt(OtT) not sqrt(OtT-ytT^2) was being returned.  Changed name of y.se to ytT.se


CHANGES IN MARSS 3.9
------------------------------------
none. resubmission due to missing file

CHANGES IN MARSS 3.8
------------------------------------
* added check for fun.kf value in checkMARSSinputs()
* added check to print.marssMLE to make sure models are class marssMODEL.  Added info to MARSSinfo() to give the user some code to convert pre-3.5 marssMLE object to the 3.5+ form.